Slider grid layout: use fixed margins for features table, otherwise the content sticks to it when text overflows.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -262,7 +262,7 @@ figure {
 .product-card-annotation {
   display: grid;
   column-gap: 200px;
-  grid-template-rows: min-content min-content min-content auto min-content;
+  grid-template-rows: min-content min-content min-content min-content;
 }
 
 .button-cart {
@@ -732,7 +732,9 @@ figure {
   grid-column: 1/3;
   grid-row: 5/6;
   justify-self: start;
-  margin: 0;
+  margin-left: 0;
+  margin-right: 0;
+  margin-top: 70px;
   margin-bottom: 40px;
   padding: 0;
 }
